<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SocksTun</string>
	<string name="socks_addr">Socks Address</string>
	<string name="socks_udp_addr">Socks UDP Address</string>
	<string name="socks_port">Socks Port</string>
	<string name="socks_user">Socks Username</string>
	<string name="socks_pass">Socks Password</string>
	<string name="dns_ipv4">DNS IPv4</string>
	<string name="dns_ipv6">DNS IPv6</string>
	<string name="udp_in_tcp">UDP relay over TCP</string>
	<string name="remote_dns">Remote DNS</string>
	<string name="ipv4">IPv4</string>
	<string name="ipv6">IPv6</string>
	<string name="global">Global</string>
	<string name="apps">Apps</string>
	<string name="save">Save</string>
	<string name="control_enable">Enable</string>
	<string name="control_disable">Disable</string>
	<string name="search">Search</string>
	<string name="profile_prev">◀</string>
	<string name="profile_next">▶</string>
	<string name="profile_rename">Rename</string>
	<string name="profile_add">Add</string>
	<string name="profile_delete">Delete</string>
	<string name="profile_name">Profile name</string>
	<string name="profile_limit">Profile limit reached (13)</string>
	<string name="profile_last">Cannot delete the last profile</string>
	<string name="profile_delete_confirm">Delete profile “%s”?</string>
</resources>
