<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp">
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:gravity="center_vertical">
			<Button
				android:id="@+id/profile_prev"
				style="?attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:text="@string/profile_prev"/>
			<TextView
				android:id="@+id/profile_name"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center"
				android:maxLines="1"
				android:ellipsize="end"
				android:textAppearance="?attr/textAppearanceTitleMedium"/>
			<Button
				android:id="@+id/profile_next"
				style="?attr/borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:minWidth="48dp"
				android:text="@string/profile_next"/>
		</LinearLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_socks_addr"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/socks_addr">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/socks_addr"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_socks_udp_addr"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/socks_udp_addr">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/socks_udp_addr"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_socks_port"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/socks_port">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/socks_port"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_socks_user"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/socks_user">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/socks_user"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_socks_pass"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/socks_pass"
			app:endIconMode="password_toggle">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/socks_pass"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_dns_ipv4"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/dns_ipv4">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/dns_ipv4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="0123456789."
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/til_dns_ipv6"
			style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:hint="@string/dns_ipv6">
			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/dns_ipv6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="0123456789abcdef:"
				android:maxLines="1"/>
		</com.google.android.material.textfield.TextInputLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp">
			<CheckBox
				android:id="@+id/remote_dns"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/remote_dns"/>
			<CheckBox
				android:id="@+id/udp_in_tcp"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/udp_in_tcp"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">
			<CheckBox
				android:id="@+id/ipv4"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/ipv4"/>
			<CheckBox
				android:id="@+id/ipv6"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/ipv6"/>
			<CheckBox
				android:id="@+id/global"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/global"/>
			<Button
				android:id="@+id/apps"
				style="?attr/materialButtonOutlinedStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/apps"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp">
			<Button
				android:id="@+id/save"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_marginEnd="8dp"
				android:text="@string/save"/>
			<Button
				android:id="@+id/control"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/control_enable"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
